# Huffman

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  accumulator.cpp  bit_code.cpp  codes.cpp  compress.cpp  decompress.cpp  tree.cpp
lib/headers/: accumulator.h  bit_code.h  codes.h  compress.h  decompress.h  haf_types.h  huf_types.h  tree.h
test/: tests.cpp
test_files/1/: 1.huf
test_files/2/: 2.huf  2.txt  2_1.txt
test_files/4/: 4.huf
test_files/w_and_p/: w_and_p.huf
utility/: CMakeLists.txt  file_compress.cpp  file_decompress.cpp  file_reader.cpp  file_writer.cpp  main.cpp
utility/header/: file_compress.h  file_decompress.h  file_reader.h  file_writer.h
